Project(Vy Truck with Vasil)

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,9 +1,10 @@
 #URLs
 url=https://qa2.vytrack.com/user/login
-browser=chrome
+browser=remote-chrome
 
 #CREDENTIALS
 storemanager.username=storemanager85
 salesmanager.username=salesmanager110
 driver.username=user153
 password=UserUser123
+
